[gd_scene load_steps=3 format=3 uid="uid://b3im5x811pdg3"]

[ext_resource type="Script" uid="uid://d36mbph6mbq00" path="res://assets/UI/RightMenu/right_menu_controller.gd" id="1_poswa"]

[sub_resource type="GDScript" id="GDScript_88aqk"]
script/source = "extends OptionButton


 
"

[node name="RightMenu" type="Control"]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -109.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_poswa")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -309.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "INVENTORY"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Inventory" type="HBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ItemList" type="ItemList" parent="PanelContainer/VBoxContainer/TabContainer/Inventory"]
layout_mode = 2
auto_width = true
auto_height = true
wraparound_items = false
max_columns = 2
same_column_width = true
fixed_icon_size = Vector2i(60, 60)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Inventory"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer"]
layout_mode = 2
item_count = 3
popup/item_0/text = "DATE"
popup/item_0/id = 0
popup/item_1/text = "STYLE"
popup/item_1/id = 1
popup/item_2/text = "COLOR"
popup/item_2/id = 3
script = SubResource("GDScript_88aqk")

[node name="DateItemList" type="ItemList" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer"]
visible = false
layout_mode = 2
auto_width = true
auto_height = true
wraparound_items = false
item_count = 5
item_0/text = "XXI"
item_1/text = "XX"
item_2/text = "XIX"
item_3/text = "XVIII"
item_4/text = "XVII"

[node name="StyleItemList" type="ItemList" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer"]
visible = false
layout_mode = 2
auto_width = true
auto_height = true
wraparound_items = false
item_count = 5
item_0/text = "IMPRESSIONISM"
item_1/text = "CUBISM"
item_2/text = "FAUISM"
item_3/text = "MINIMALISM"
item_4/text = "ABSTRACT"

[node name="ColorItemList" type="ItemList" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer"]
visible = false
layout_mode = 2
auto_width = true
auto_height = true
wraparound_items = false
item_count = 5
item_0/text = "RED"
item_1/text = "BLUE"
item_2/text = "GREEN"
item_3/text = "YELLOW"
item_4/text = "ABSTRACT"

[node name="ItemList" type="ItemList" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer"]
layout_mode = 2
auto_width = true
auto_height = true
item_count = 1
item_0/text = "dbrddb"

[node name="Almanach2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[connection signal="item_selected" from="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
